<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="60dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_plantname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Plant Name:"
        android:textColor="@color/color2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPalntName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_sensornameid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Sensor ID:"
        android:textColor="@color/color2"
        android:textSize="24sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editText_sensorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/tv_plantProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Plant Profile:"
        android:textColor="@color/color2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/color2"
            android:fontFamily="@font/montserrat_bold"
            android:text="Clear"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color2"
            android:fontFamily="@font/montserrat_bold"
            android:text="Save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <Button
        android:id="@+id/button_clear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@color/color2"
        android:fontFamily="@font/montserrat_bold"
        android:text="Clear"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_save2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color2"
        android:fontFamily="@font/montserrat_bold"
        android:text="Save"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />


</LinearLayout>