<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/navigation_plant"

        android:title="plant" />

    <item
        android:id="@+id/navigation_plantProfile"

        android:title="plant profile" />

</menu>

